Fixing text overflow issues (#124)
Fixing text overflow issues

Addressing #123
Fixing long string that is not wrapped

--- a/otcdocstheme/theme/otcdocs/static/css/otcdocstheme.css
+++ b/otcdocstheme/theme/otcdocs/static/css/otcdocstheme.css
@@ -677,6 +677,11 @@ code.docutils.literal.notranslate {
   grid-area: main;
 }
 
+/* Forcing word wrapping to avoid text overflow in case of no space in it */
+.docs-main p {
+  word-wrap: break-word;
+}
+
 @media (min-width: 992px) {
   .docs-main {
     /*
